# SimCore

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  TODO.travis.yml  conanfile.txt  index.md  install_dependencies.sh  install_gtest.sh
src/: CMakeLists.txt
src/components/: CMakeLists.txt  VehicleModel.cpp
src/components/data/: DataManager.cpp  DataManager.h  DataPublisher.h  JsonFileReporter.h  JsonReporter.h  TimeReporter.h
src/components/environment/: Agent.h  VirtualHorizon.h
src/components/timers/: BasicTimer.cpp  BasicTimer.h  RealTimeTimer.cpp  RealTimeTimer.h  TimeIsUp.cpp  TimeIsUp.h
src/components/traffic/: Agent.cpp  Agent.h  Environment.cpp  Environment.h  PrimaryController.cpp  PrimaryController.h  VehicleModel.cpp  VehicleModel.h
src/components/value/: SignalCurve.h  SignalTube.h  ValueExceed.h  ValueOutOfTube.h
src/core/: CMakeLists.txt  DataAccessMacros.h  DataManager.h  DataNode.h  Exceptions.h  IComponent.h  IModel.h  IParameterizable.h  IPlugin.h  IStopCondition.h  IStorable.h  ISynchronized.h  ITimer.h  Loop.cpp  Loop.h  Model.h  Plugin.h  SimModel.h  functions.h
src/include/simcore/: IComponent.h  IStopCondition.h  IStorable.h  ISynchronized.h  Loop.h  Model.h  Simulation.h  exceptions.h  sim_functions.h
src/include/simtraffic/: TrafficSimulation.h  VehicleModel.h  VehicleModelAdapter.h  definitions.h
src/include/virtual_vehicle/: VehicleModel.h
src/lib/framework/: CMakeLists.txt  ModelManager.cpp  Simulation.cpp
src/lib/socket/: CMakeLists.txt  DataPublisher.cpp  Socket.h  UDPLogger.cpp  UDPSocket.cpp  UDPSocket.h  WebSocket.cpp  WebSocket.h  WebsocketLogger.cpp  WebsocketTimer.cpp
src/lib/test/: CMakeLists.txt
src/lib/traffic/: CMakeLists.txt  Unit.cpp
src/models/: BasicTimer.h  CMakeLists.txt  PrimaryController.h  RealTimeTimer.cpp  RealTimeTimer.h  TimeIsUp.h  TimeReporter.h  VehicleModel.cpp  VehicleModel.h
src/models/agent/: AgentInjection.h  AgentModel.cpp  AgentModel.h  AgentModelAdapter.h  AgentModelDummyInjection.h  AgentModelInterface.h  AgentsLogger.h  ModelCollection.cpp  ModelCollection.h
src/models/reporters/: JsonReporter.h  TimeReporter.h
src/models/timers/: BasicTimer.h  RealTimeTimer.cpp  RealTimeTimer.h  TimeIsUp.cpp  TimeIsUp.h
src/models/traffic/: VehicleModel.cpp  VehicleModel.h
src/models/value/: SignalCurve.h  SignalTube.h  ValueExceed.h  ValueOutOfTube.h
src/plugin/: IPlugin.h  Plugin.h  PluginManager.cpp  PluginManager.h
src/simcore/simtraffic/: CMakeLists.txt  TrafficSimulation.cpp
src/simcore/socket/: CMakeLists.txt  WebSocket.cpp  WebSocket.h  WebsocketTimer.cpp
src/simtraffic/: BasicSimulation.cpp  CMakeLists.txt  Unit.cpp  UnitData.cpp
src/socket/: CMakeLists.txt  DataPublisher.cpp  DataPublisher.h  Socket.h  WebSocket.cpp  WebSocket.h  WebsocketLogger.cpp  WebsocketTimer.cpp
src/storage/: CMakeLists.txt  DataManager.cpp  Manager.cpp  Manager.h  SimCore.proto  dump_implementations.cpp
src/traffic/: Agent.cpp  Agent.h  BasicSimulation.cpp  CMakeLists.txt  Environment.cpp  Environment.h  PrimaryController.cpp  PrimaryController.h  UnitData.cpp  UnitModelData.cpp  VehicleModel.cpp  VehicleModel.h  types.h
test/: AgentModelTest.h  AlgoTest.h  CMakeLists.txt  DMAlgoTest.h  DataTest.cpp  DataTest.h  EnvironmentTest.cpp  EnvironmentTest.h  ModelTest.h  PluginTest.cpp  PluginTest.h  PublishTest.cpp  PublishTest.h  ReporterTest.h  SignalTest.cpp  SignalTest.h  SimTest.cpp  SimTest.h  TestSimulation.cpp  TestSimulation.h  TrafficSimulationTest.cpp  VehicleModelTest.cpp  VehicleModelTest.h  VirtualHorizonTest.h  main.cpp
test/agent/: AMT_Stop.h  AMT_VelChoice.h  AMT_VelControl.h
test/agent_tests/: AMT_Follow.h  AMT_PriInputs.h  AMT_Stop.h  AMT_VelChoice.h  AMT_VelControl.h
test/application/: ApplicationTest.cpp  CMakeLists.txt  SampleApplication.h  Simulation.h  TrafficSimulation.cpp  TrafficSimulation.h  config.yaml  creator_functions.h
test/application/traffic/: TrafficSimulation.cpp  TrafficSimulation.h  VehicleModel.h  sim_functions.h  sim_types.h
test/blocks/: BlockTest.cpp  CMakeLists.txt  Global.h  PIDController.h  PIDController_Interface.h  SignalTest.cpp  blocks.json  blocks.yaml  index.html
test/blocks/generator/: generator.js  index.js  package-lock.json  package.json
test/configuration/: CMakeLists.txt  ConfigurationTest.cpp  config.json
test/cucumber/: CMakeLists.txt
test/cucumber/features/: VehicleModelLongitudinalMotion.feature
test/helpers/: AgentStandardParameters.h  AgentTestParameters.h  TestSimulation.h
test/model_generation/: CMakeLists.txt  ModelClass.h  ModelClass_Interface.h  ModelTest.cpp
test/protobuf/: CMakeLists.txt  ProtoTest.cpp  SimCore.proto
test/scenario/: CMakeLists.txt
test/scenario/src/: Simulation.cpp  (+1 more)
test/server/: CMakeLists.txt  PublishTest.cpp  RemoteLoggingTest.cpp
test/simbasic/: CMakeLists.txt  PolynomialTest.cpp  SplineTest.cpp
test/simcore/: BasicSimulationTest.cpp  CMakeLists.txt  DataReporterTest.cpp  DataTest.cpp  ExceptionTest.cpp  LifeCycleTest.cpp  LogginTest.cpp  LoggingTest.cpp  LoopTest.cpp  PlotTest.cpp  ProcessTest.cpp  PublishTest.cpp  RegistryTest.cpp  SignalBasicTest.cpp  SignalTest.cpp  SimBasicTest.cpp  SimTest.cpp  SimulationTestTest.cpp  StopConditionTest.cpp  StorageTest.cpp  SynchronizedTimerTest.cpp  TimerTest.cpp  ValueCheckBasicTest.cpp  ValueCheckTest.cpp  WebsocketTimerTest.cpp
test/simtraffic/: CMakeLists.txt  TrafficSimulationTest.cpp  UnitInterfaceTest.cpp  UnitSendReceiveRest.cpp  VehicleModelTest.cpp
test/storage/: CMakeLists.txt  DumpTest.cpp  ProtoTest.cpp  SignalTest.cpp  SimulationSignalTest.cpp
test/testing/: CMakeLists.txt  TestingTest.cpp  config.json  config.yaml
test/tools/: index.html
test/traffic/: CMakeLists.txt  TrafficUnitTest.cpp  UnitTest.cpp  VehicleModelTest.cpp  VehicleTest.cpp
test/traffic_simulation/: CMakeLists.txt  SimulationTest.cpp  TrafficSimulationTest.cpp
test/vehicle_model/: CMakeLists.txt  ControllerTest.cpp  VehicleModelTest.cpp
test/virtual_vehicle/: CMakeLists.txt  VehicleModelTest.cpp
(+165 files in other folders)
